@@ -12,8 +12,6 @@ import sang.se.bookingmovie.app.format.FormatRepository;
 import sang.se.bookingmovie.app.movie.MovieEntity;
 import sang.se.bookingmovie.app.movie.MovieMapper;
 import sang.se.bookingmovie.app.movie.MovieRepository;
-import sang.se.bookingmovie.app.movie.MovieResponse;
-import sang.se.bookingmovie.app.movie_img.MovieImage;
 import sang.se.bookingmovie.app.room.RoomEntity;
 import sang.se.bookingmovie.app.room.RoomRepository;
 import sang.se.bookingmovie.app.seat_room.SeatRoomResponse;
@@ -49,6 +47,8 @@ public class ShowtimeService implements IShowtimeService {
 
     @Override
     public String create(List<ShowtimeRequest> showtimeRequests) {
+        if (!checkShowtimeInData(showtimeRequests) || !checkShowtimeInList(showtimeRequests))
+            throw new AllException("Data in valid", 400, List.of("The room already has showtime"));
         for (ShowtimeRequest showtimeRequest : showtimeRequests) {
             RoomEntity roomEntity = roomRepository.findById(showtimeRequest.getRoom())
                     .orElseThrow(() -> new AllException("Not Found", 404, List.of("Not found room id")));
@@ -61,56 +61,51 @@ public class ShowtimeService implements IShowtimeService {
             showtimeEntity.setRoom(roomEntity);
             showtimeEntity.setFormat(format);
             showtimeEntity.setMovie(movie);
+            showtimeEntity.setStatus(true);
             showtimeRepository.save(showtimeEntity);
         }
         return "success";
     }
 
     @Override
-    public CinemaResponse getShowtimeByCinemaAndDate(Date date, String cinemaId) {
+    public ListResponse getShowtimeByCinemaAndDate(Date date, String cinemaId) {
         CinemaEntity cinemaEntity = cinemaRepository.findById(cinemaId)
                 .orElseThrow(() -> new DataNotFoundException("Data not found", List.of("Cinema is not exits")));
         List<MovieEntity> movieEntities = showtimeRepository.findByDateAndCinema(date, cinemaId);
-        CinemaResponse cinemaResponse = cinemaMapper.entityToResponse(cinemaEntity);
-        cinemaResponse.setMovies(movieEntities.stream()
-                .peek(this::getFieldInShowtimeByCinemaAndDate)
-                .map(movieMapper::entityToResponse)
-                .peek(movieResponse -> {
-                    movieResponse.setShowtimes(movieResponse.getShowtimes().stream()
-                            .sorted(Comparator.comparing(ShowtimeResponse::getStartTime))
-                            .collect(Collectors.toList())
-                    );
-                })
-                .toList()
-        );
-        return cinemaResponse;
+        return ListResponse.builder()
+                .total(movieEntities.size())
+                .data(movieEntities.stream()
+                        .peek(this::getFieldInShowtimeByCinemaAndDate)
+                        .map(movieMapper::entityToResponse)
+                        .peek(movieResponse -> {
+                            movieResponse.setShowtimes(movieResponse.getShowtimes().stream()
+                                    .sorted(Comparator.comparing(ShowtimeResponse::getStartTime))
+                                    .collect(Collectors.toList())
+                            );
+                        })
+                        .toList())
+                .build();
     }
 
     @Override
-    public MovieResponse getShowtimeByMovie(Date date, String movieId) {
+    public List<CinemaResponse> getShowtimeByMovie(Date date, String movieId) {
         MovieEntity movieEntity = movieRepository.findById(movieId)
                 .orElseThrow(() -> new DataNotFoundException("Data not found", List.of("movie is not exist")));
-        getFieldToDetail(movieEntity);
-        MovieResponse movieResponse = movieMapper.entityToResponse(movieEntity);
-        movieResponse.setImages(movieResponse.getImages().stream()
-                .sorted(Comparator.comparing(MovieImage::getId))
-                .collect(Collectors.toList())
-        );
         List<CinemaEntity> cinemaEntities = showtimeRepository.findByMovieAndDate(date, movieId);
-        movieResponse.setCinemas(cinemaEntities.stream().map(cinemaEntity -> {
-                    Set<ShowtimeEntity> showtimeEntities = cinemaEntity.getRooms().stream()
-                            .flatMap(roomEntity -> roomEntity.getShowtimes().stream())
-                            .collect(Collectors.toSet());
-                    CinemaResponse cinemaResponse = cinemaMapper.entityToResponse(cinemaEntity);
-                    cinemaResponse.setShowtime(showtimeEntities.stream()
-                            .peek(showtimeEntity -> showtimeEntity.setRoom(null))
-                            .map(showtimeMapper::entityToResponse)
-                            .sorted(Comparator.comparing(ShowtimeResponse::getStartTime))
-                            .collect(Collectors.toList()));
-                    return cinemaResponse;
-                })
-                .collect(Collectors.toList()));
-        return movieResponse;
+        List<CinemaResponse> cinemaResponses = cinemaEntities.stream().map(cinemaEntity -> {
+            Set<ShowtimeEntity> showtimeEntities = cinemaEntity.getRooms().stream()
+                    .flatMap(roomEntity -> roomEntity.getShowtimes().stream())
+                    .collect(Collectors.toSet());
+            CinemaResponse cinemaResponse = cinemaMapper.entityToResponse(cinemaEntity);
+            cinemaResponse.setShowtime(showtimeEntities.stream()
+                    .peek(this::getFieldToList)
+                    .map(showtimeMapper::entityToResponse)
+                    .sorted(Comparator.comparing(ShowtimeResponse::getStartTime))
+                    .collect(Collectors.toList()));
+            return cinemaResponse;
+        })
+                .collect(Collectors.toList());
+        return cinemaResponses;
     }
 
     @Override
@@ -145,9 +140,43 @@ public class ShowtimeService implements IShowtimeService {
         return showtimeResponse;
     }
 
+    private Boolean checkShowtimeInData(List<ShowtimeRequest> showtimeRequests){
+        for (ShowtimeRequest newShowtime : showtimeRequests) {
+            List<ShowtimeEntity> showtimeEntities = showtimeRepository.findByDateAndRoom(newShowtime.getStartDate(), newShowtime.getRoom());
+            LocalTime isTime = newShowtime.getStartTime().toLocalTime();
+            for (ShowtimeEntity showtimeEntity : showtimeEntities ) {
+                LocalTime existTime = showtimeEntity.getStartTime().toLocalTime();
+                if ( (isTime.isAfter(existTime)
+                        && isTime.isBefore(existTime.plusMinutes(30 + showtimeEntity.getRunningTime())))
+                        || (existTime.isAfter(isTime)
+                        && existTime.isBefore(isTime.plusMinutes(30 + newShowtime.getRunningTime() )))
+                ) {
+                    return false;
+                }
+            }
+        }
+        return true;
+    }
+
+    private Boolean checkShowtimeInList(List<ShowtimeRequest> showtimeRequests){
+        for (int i = 0; i < showtimeRequests.size() - 1; i++) {
+            LocalTime isTime = showtimeRequests.get(i).getStartTime().toLocalTime();
+            for (int j = i+1; j < showtimeRequests.size(); j++) {
+                LocalTime exitsTime = showtimeRequests.get(j).getStartTime().toLocalTime();
+                if ( ((isTime.isAfter(exitsTime) && isTime.isBefore(exitsTime.plusMinutes(30 + showtimeRequests.get(j).getRunningTime())))
+                        || (exitsTime.isAfter(isTime)
+                        && exitsTime.isBefore(isTime.plusMinutes(30 + showtimeRequests.get(i).getRunningTime()))))
+                        && showtimeRequests.get(i).getRoom().equals(showtimeRequests.get(j).getRoom())
+                ) {
+                    return false;
+                }
+            }
+        }
+        return true;
+    }
+
     private void getFieldToGetSeat(ShowtimeEntity showtimeEntity) {
-        showtimeEntity.setMovie(null);
-        showtimeEntity.setFormat(null);
+        getFieldToDetail(showtimeEntity.getMovie());
         showtimeEntity.setTickets(null);
     }
 
@@ -156,11 +185,19 @@ public class ShowtimeService implements IShowtimeService {
         movieEntity.getStatus().setMovies(null);
     }
 
+    private void getFieldToList(ShowtimeEntity showtimeEntity) {
+        showtimeEntity.setRoom(null);
+        showtimeEntity.setMovie(null);
+        showtimeEntity.setFormat(null);
+    }
+
     private void getFieldInShowtimeByCinemaAndDate(MovieEntity movieEntity) {
         movieEntity.setGenre(null);
         movieEntity.setStatus(null);
         movieEntity.setFormats(null);
         movieEntity.setComments(null);
-        movieEntity.getShowtimes().forEach(showtimeEntity -> showtimeEntity.setRoom(null));
+        movieEntity.getShowtimes().forEach(this::getFieldToList);
     }
+
+
 }
